# claude-voice-notifier

./: .env.example  .gitignore  Cargo.toml  README.md  claude_stop_hook.sh  droid_stop_hook.sh  flake.nix  test_hook.sh
.claude/: settings.local.json
docs/: ARCHITECTURE.md  CLAUDE_HOOKS.md  IMPLEMENTATION_NOTES.md  MASTER_TODO.md  PROJECT_GOALS.md
src/: anthropic.rs  audio.rs  config.rs  lib.rs  main.rs  transcript.rs  tts.rs
