[package]
name = "voice-notifier"
version = "0.1.0"
edition = "2021"
authors = ["Tony"]
description = "Voice notifications for Claude Code task completions"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.12"

[dev-dependencies]
mockito = "1.5"